[package]
name = "mycelium-lint"
version.workspace = true
description = "myc-lint — lint + auto-fix (M-366): surfaces the M-141 invariant lints + the header lints as ACTIONABLE, reified, opt-in fixes with a suggest/apply/scaffold boundary (a control-flow change is a scaffold, never auto-applied — RFC-0014 I1/I5). Hosts the M-363 §4.1 doc quality-bar lint (dormant-but-defined until the doc IR lands). No silent rewrite (G2). KC-3 — above the kernel; no new dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The M-141 lints + M-362 baseline (mycelium-lsp) and the parse/check/elaborate pipeline (mycelium-l1).
mycelium-l1 = { git = "https://github.com/tzervas/mycelium-l1", rev = "cd32a1ed7ab7d2be38c9c3047da7318d182b7a1c" }
mycelium-lsp = { git = "https://github.com/tzervas/mycelium-lsp", rev = "7a3cfad66a3cd8a9002d885b70fd5291e6919723" }
# The M-363 doc-IR + the §4.1 doc quality-bar lint, now ACTIVE (Wave B): the check-name set lives there
# as the single source of truth, re-exported here as `DOC_QUALITY_CHECKS`. KC-3 — both above the kernel.
mycelium-doc = { git = "https://github.com/tzervas/mycelium-doc", rev = "85c48010fb054dc80d8a86a854564c7cab5f7942" }
# M-643: the shared CLI substrate (stdin-or-file `read_source`, the `.myc` `walk_myc`). In-workspace
# path dep, std-only — no new external crate enters the tree (KC-3).
mycelium-cli-common = { git = "https://github.com/tzervas/mycelium-cli-common", rev = "c673fafdd1bcecb713e3560689af6ab152033867" }

[[bin]]
name = "myc-lint"
path = "src/bin/myc-lint.rs"

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-lint"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
